# FreeStream

./: .gitignore  README.md  pyproject.toml  template.secrets.toml
.devcontainer/: devcontainer.json
.github/workflows/: black.yml
.streamlit/: config.toml
freestream/: 🏡_Home.py
freestream/pages/: 1_💬_Curie.py  1_🤖_RAGbot.py  2_💬_Chatbot.py  2_💬_Curie.py  2_🖼️_Real-ESRGAN.py  2_🤖_RAGbot.py  3_🛠️_InfoNexus.py  3_🛠️_Tool_Executor.py  __init__.py
freestream/pages/.archive/: 3_🛠️_InfoNexus.py
freestream/pages/utils/: __init__.py  image_upscaler.py  styles.py  utility_funcs.py
