[tool.poetry]

name = "FreeStream"
version = "4.1.4"
description = "Free AI Assistants."
authors = ["Daethyra <109057945+Daethyra@users.noreply.github.com>"]
readme = "README.md"
license = "GNU AGPL"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

langchain = "^0.1.6"
langchain-openai = "^0.0.7"
streamlit = "1.33.0"
unstructured = {extras = ["all-docs"], version = "^0.12.4"}
sentence-transformers = "^2.3.1"
faiss-cpu = "^1.7.4"
setuptools = "^69.1.0"
torch = "^2.2.0"
opencv-python-headless = "^4.9.0.80"
langchain-anthropic = "^0.1.4"
langgraph = "^0.0.31"
numexpr = "^2.10.0"
langchainhub = "^0.1.15"
tavily-python = "^0.3.3"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
